Chopped off touch selection menu in RTL after Harmony changes.

Fixed Widget::SetBoundsConstrained & ensured TouchSelectionMenuRunnerViews is clamped to the desktop bounds.

Bug: 791507
Change-Id: I3386fc2a93bee2c10ce98ffa3b2974ab40b9606a