ui/views/touchui/touch_selection_menu_runner_views.cc
@@ -10,6 +10,8 @@
 #include "base/strings/utf_string_conversions.h"
 #include "ui/aura/window.h"
 #include "ui/base/l10n/l10n_util.h"
+#include "ui/display/display.h"
+#include "ui/display/screen.h"
 #include "ui/gfx/canvas.h"
 #include "ui/gfx/geometry/insets.h"
 #include "ui/gfx/geometry/rect.h"
@@ -120,7 +122,16 @@ TouchSelectionMenuRunnerViews::Menu::Menu(TouchSelectionMenuRunnerViews* owner,
   SetAnchorRect(adjusted_anchor_rect);
 
   BubbleDialogDelegateView::CreateBubble(this);
-  GetWidget()->Show();
+  Widget* widget = GetWidget();
+  gfx::Rect bounds = widget->GetWindowBoundsInScreen();
+  gfx::Rect work_area = display::Screen::GetScreen()
+                            ->GetDisplayNearestPoint(bounds.origin())
+                            .work_area();
+  if (!work_area.IsEmpty()) {
+    bounds.AdjustToFit(work_area);
+    widget->SetBounds(bounds);
+  }
+  widget->Show();
 }
 
 bool TouchSelectionMenuRunnerViews::Menu::IsMenuAvailable(
